[gd_scene load_steps=75 format=2]

[ext_resource path="res://assets/other/heartsui/Heart2.png" type="Texture" id=1]
[ext_resource path="res://assets/main/bullet2.png" type="Texture" id=2]
[ext_resource path="res://assets/other/heartsui/HeartEmpty.png" type="Texture" id=3]
[ext_resource path="res://assets/other/heartsui/Heart1Half.png" type="Texture" id=4]
[ext_resource path="res://assets/main/bullet0.png" type="Texture" id=5]
[ext_resource path="res://assets/other/heartsui/Heart2Half.png" type="Texture" id=6]
[ext_resource path="res://assets/main/sounds/pits_laser.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/main/character/PlayerFall.png" type="Texture" id=8]
[ext_resource path="res://assets/other/heartsui/HeartHalf.png" type="Texture" id=9]
[ext_resource path="res://assets/other/heartsui/HeartFull.png" type="Texture" id=10]
[ext_resource path="res://assets/main/bullet1.png" type="Texture" id=11]
[ext_resource path="res://assets/other/heartsui/Heart1.png" type="Texture" id=12]
[ext_resource path="res://scenes/main/player/Player.gd" type="Script" id=13]
[ext_resource path="res://assets/main/NewObject7-1-4.png" type="Texture" id=14]
[ext_resource path="res://assets/main/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/main/sounds/hurt_0_0.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/main/sounds/coin_pickup.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/main/sounds/pits_jump.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/main/sounds/pits_enemyhit.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/main/sounds/pits_wallhit.wav" type="AudioStream" id=20]
[ext_resource path="res://scenes/main/player/HeartUI.gd" type="Script" id=21]

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Damaged"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "FallLookingUp"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "FallingNormal"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "LookingDown(OnlyInAir)"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "OnGroundLookUp"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunPointingUp"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachine" id=41]
states/Damaged/node = SubResource( 19 )
states/Damaged/position = Vector2( 266, 140 )
states/FallLookingUp/node = SubResource( 20 )
states/FallLookingUp/position = Vector2( 538, 128 )
states/FallingNormal/node = SubResource( 21 )
states/FallingNormal/position = Vector2( 538, 212 )
states/Idle/node = SubResource( 22 )
states/Idle/position = Vector2( 335, 315 )
states/LookingDown(OnlyInAir)/node = SubResource( 23 )
states/LookingDown(OnlyInAir)/position = Vector2( 538, 54 )
states/OnGroundLookUp/node = SubResource( 56 )
states/OnGroundLookUp/position = Vector2( 139, 448 )
states/Run/node = SubResource( 24 )
states/Run/position = Vector2( 6, 315 )
states/RunPointingUp/node = SubResource( 25 )
states/RunPointingUp/position = Vector2( 12, 155 )
transitions = [ "Idle", "Run", SubResource( 26 ), "Run", "Idle", SubResource( 27 ), "Idle", "RunPointingUp", SubResource( 28 ), "RunPointingUp", "Idle", SubResource( 29 ), "Idle", "Damaged", SubResource( 30 ), "LookingDown(OnlyInAir)", "Idle", SubResource( 32 ), "Idle", "LookingDown(OnlyInAir)", SubResource( 33 ), "Run", "RunPointingUp", SubResource( 34 ), "Idle", "FallLookingUp", SubResource( 35 ), "FallLookingUp", "Idle", SubResource( 36 ), "Idle", "FallingNormal", SubResource( 37 ), "FallingNormal", "Idle", SubResource( 38 ), "FallingNormal", "FallLookingUp", SubResource( 39 ), "FallingNormal", "LookingDown(OnlyInAir)", SubResource( 40 ), "RunPointingUp", "Run", SubResource( 43 ), "Damaged", "Idle", SubResource( 44 ), "OnGroundLookUp", "Idle", SubResource( 57 ), "Idle", "OnGroundLookUp", SubResource( 58 ), "OnGroundLookUp", "FallLookingUp", SubResource( 59 ), "FallLookingUp", "OnGroundLookUp", SubResource( 60 ), "OnGroundLookUp", "Run", SubResource( 61 ), "Run", "OnGroundLookUp", SubResource( 62 ), "RunPointingUp", "OnGroundLookUp", SubResource( 63 ), "OnGroundLookUp", "RunPointingUp", SubResource( 64 ) ]
start_node = "Idle"
graph_offset = Vector2( -116, 11 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=42]

[sub_resource type="Animation" id=13]
resource_name = "Damaged"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ Color( 0.682353, 0.203922, 0.203922, 1 ), Color( 0.682353, 0.203922, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "FallLookingUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 13 ]
}

[sub_resource type="Animation" id=15]
resource_name = "FallingNormal"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=17]
resource_name = "LookingDown(OnlyInAir)"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 14 ]
}

[sub_resource type="Animation" id=55]
resource_name = "OnGroundLookUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 4 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 21, 15 ]
}

[sub_resource type="Animation" id=14]
resource_name = "RunPointingUp"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28, 29, 23 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 4 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0, 0, 0, 0.376471 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=49]
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=50]
size = 25
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=47]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=45]
resource_name = "flashin"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=48]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=46]
resource_name = "flashout"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.230769 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=52]
resource_name = "timer"

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 3.5, 3.5 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 4242
script = ExtResource( 13 )
SHOOTFORCE = -150
deceleration = 20
jump_slowing_down = 25
jump_height = 20.0
jump_time_to_peak = 0.3
jump_time_to_descent = 0.2
lowfallMultiplier = 50
Wall_jump_Velocity = Vector2( 150, -110 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 3, 3 )
scale = Vector2( 4, 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 8 )
hframes = 6
vframes = 6
frame = 6
region_rect = Rect2( 24, 14, 12, 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 41 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 42 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Damaged = SubResource( 13 )
anims/FallLookingUp = SubResource( 16 )
anims/FallingNormal = SubResource( 15 )
anims/Idle = SubResource( 11 )
anims/LookingDown(OnlyInAir) = SubResource( 17 )
anims/OnGroundLookUp = SubResource( 55 )
anims/RESET = SubResource( 12 )
anims/Run = SubResource( 18 )
anims/RunPointingUp = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 2 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="WallRaycastsLeft" type="Node2D" parent="."]

[node name="RayCast1" type="RayCast2D" parent="WallRaycastsLeft"]
position = Vector2( -5.05284, -1.94101 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RayCast2" type="RayCast2D" parent="WallRaycastsLeft"]
position = Vector2( -5.05284, 6.00659 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="WallRaycastsRight" type="Node2D" parent="."]

[node name="RayCast1" type="RayCast2D" parent="WallRaycastsRight"]
position = Vector2( 2.09291, -2 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="RayCast2" type="RayCast2D" parent="WallRaycastsRight"]
position = Vector2( 2.05145, 5.9476 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HeartUI" type="Node2D" parent="HUD"]
rotation = -0.00280598
script = ExtResource( 21 )

[node name="Hearts0" type="Sprite" parent="HUD/HeartUI"]
position = Vector2( 352, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="HHearts" type="Sprite" parent="HUD/HeartUI"]
position = Vector2( 352, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )

[node name="Hearts1" type="Sprite" parent="HUD/HeartUI"]
position = Vector2( 352, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="HHearts1" type="Sprite" parent="HUD/HeartUI"]
position = Vector2( 352, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Hearts2" type="Sprite" parent="HUD/HeartUI"]
position = Vector2( 352, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="HHearts2" type="Sprite" parent="HUD/HeartUI"]
position = Vector2( 352, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Hearts3" type="Sprite" parent="HUD/HeartUI"]
position = Vector2( 352, 24 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="ShotUI" type="Node2D" parent="HUD"]
position = Vector2( 48, 24 )
scale = Vector2( 3.5, 3.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="HUD/ShotUI"]
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="HUD/ShotUI"]
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="HUD/ShotUI"]
texture = ExtResource( 2 )

[node name="ShellUI" type="Node2D" parent="HUD"]
position = Vector2( 24, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="HUD/ShellUI"]
margin_left = 512.0
margin_top = 8.0
margin_right = 664.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShellSprite" type="Sprite" parent="HUD/ShellUI"]
position = Vector2( 536, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="X" type="Label" parent="HUD/ShellUI"]
margin_left = 544.0
margin_top = 24.0
margin_right = 584.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 49 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShellAmount" type="Label" parent="HUD/ShellUI"]
margin_left = 578.0
margin_top = 20.0
margin_right = 653.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 50 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashScreen" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="FlashScreen"]
visible = false
margin_left = -752.0
margin_top = -576.0
margin_right = 768.0
margin_bottom = 584.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashIN" type="AnimationPlayer" parent="FlashScreen"]
autoplay = "flashin"
anims/RESET = SubResource( 47 )
anims/flashin = SubResource( 45 )

[node name="FlashOUT" type="AnimationPlayer" parent="FlashScreen"]
root_node = NodePath("../ColorRect")
anims/RESET = SubResource( 48 )
anims/flashout = SubResource( 46 )

[node name="MoveTimer" type="AnimationPlayer" parent="FlashScreen"]
anims/timer = SubResource( 52 )

[node name="Sounds" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="ShootSound1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -30.0

[node name="HurtSound1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )
volume_db = -20.0

[node name="ShellPickupSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )
volume_db = -15.0

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )
volume_db = -30.0

[node name="WallHitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 20 )
volume_db = -34.0

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 19 )
volume_db = -30.0

[node name="SpikeTDT" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 16384
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeTDT"]
visible = false
position = Vector2( -1.5, 1.5 )
shape = SubResource( 53 )
__meta__ = {
"_edit_lock_": true
}

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[connection signal="animation_finished" from="FlashScreen/FlashOUT" to="." method="_on_FlashOUT_animation_finished"]
[connection signal="animation_finished" from="FlashScreen/MoveTimer" to="." method="_on_MoveTimer_animation_finished"]
[connection signal="body_entered" from="SpikeTDT" to="." method="_on_SpikeTDT_body_entered"]
